# rm_sentry_autonav

./: README.md  slam流程.vsdx  项目流程.vsdx
Reality/: README.md
Simulation/: README.md
Simulation/ws/: README.md
Simulation/ws/src/imu_to_odom/src/: imu_to_odom_node.cpp
Simulation/ws/src/livox_laser_simulation/include/livox_laser_simulation/: livox_points_plugin.h
Simulation/ws/src/livox_laser_simulation/launch/: livox_simulation.launch
Simulation/ws/src/livox_laser_simulation/src/: livox_ode_multiray_shape.cpp  livox_points_plugin.cpp
Simulation/ws/src/livox_laser_simulation/urdf/: livox_mid360.xacro
Simulation/ws/src/robot/: CMakeLists.txt
Simulation/ws/src/robot/launch/: gazebo.launch
Simulation/ws/src/robot/map/: map.pgm
Simulation/ws/src/robot/meshes/: lidar_link.STL  wheel_link2.STL
Simulation/ws/src/robot/param/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Simulation/ws/src/robot/urdf/: robot.csv  robot.urdf
slam流程图/: slam流程.vsdx  ~$$slam流程.~vsdx
仿真/ws/: README.md
仿真/ws/src/: readme.md
仿真/ws/src/astar_path_planner/: package.xml
仿真/ws/src/astar_path_planner/launch/: astar_planner.launch
仿真/ws/src/astar_path_planner/src/: astar_planner_node copy 2.cpp
仿真/ws/src/decision/: CMakeLists.txt  readme.md
仿真/ws/src/decision/launch/: decision copy.launch
仿真/ws/src/decision/src/: decision_node copy 2.cpp  decision_node copy 3.cpp  decision_node.cpp
仿真/ws/src/dynamic_map_generator/launch/: dynamic_map_generator copy.launch
仿真/ws/src/dynamic_map_generator/src/: dynamic_map_generator_node copy 4.cpp  dynamic_map_generator_node copy.cpp
仿真/ws/src/imu_to_odom/: CMakeLists.txt  package.xml
仿真/ws/src/livox_laser_simulation/: CMakeLists.txt  package.xml
仿真/ws/src/livox_laser_simulation/include/livox_laser_simulation/: livox_ode_multiray_shape.h
仿真/ws/src/livox_laser_simulation/urdf/: livox_gazebo_sensor.xacro
仿真/ws/src/livox_ros_driver2/: build.sh
仿真/ws/src/path_follower/: CMakeLists.txt
仿真/ws/src/path_follower/launch/: path_follower.launch
仿真/ws/src/path_follower/src/: path_follower.cpp
仿真/ws/src/pure_pursuit/: CMakeLists.txt  package.xml
仿真/ws/src/pure_pursuit/config/: pure_pursuit_params.yaml
仿真/ws/src/pure_pursuit/launch/: pure_pursuit.launch
仿真/ws/src/pure_pursuit/src/: pure_pursuit.cpp
仿真/ws/src/robot/: CMakeLists.txt
仿真/ws/src/robot/launch/: amcl copy.launch  amcl.launch  mapping.launch  nav copy.launch  nav.launch
仿真/ws/src/robot/map/: map.yaml  map（另一个复件）.pgm  map（复件）.pgm  map（复件）.yaml
仿真/ws/src/robot/meshes/: wheel_link1.STL
仿真/ws/src/robot/param/: base_local_planner_params.yaml  costmap_common_params.yaml
仿真/ws/src/robot/rviz/: config.rviz  mapping.rviz
仿真/ws/src/robot/urdf/: robot.urdf
仿真/ws/src/robot/world/: arena.world
仿真/ws/src/serial_com/: readme.md
仿真/ws/src/serial_com/include/: serial_com copy 2.h  serial_com.h
仿真/ws/src/serial_com/launch/: serial_com.launch
仿真/ws/src/serial_com/src/: serial_com copy 3.cpp  serial_com.cpp  test_node.cpp
仿真/ws/src/smooth_path_follower/: CMakeLists.txt  package.xml
仿真/ws/src/smooth_path_follower/config/: params.yaml
仿真/ws/src/smooth_path_follower/launch/: smooth_path_follower.launch
仿真/ws/src/smooth_path_follower/src/: smooth_path_follower.cpp
真机/: README.md
真机/ws/: README.md
真机/ws/autostart/: ros_nav.desktop
真机/ws/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh
真机/ws/devel/include/livox_ros_driver2/: CustomMsg.h  CustomPoint.h
真机/ws/devel/lib/astar_path_planner/: astar_planner_node
真机/ws/devel/lib/decision/: decision_node
真机/ws/devel/lib/dynamic_map_generator/: dynamic_map_generator_node
真机/ws/devel/lib/imu_to_odom/: imu_to_odom_node
真机/ws/devel/lib/path_follower/: path_follower
真机/ws/devel/lib/pkgconfig/: astar_path_planner.pc  decision.pc  dynamic_map_generator.pc  imu_to_odom.pc  livox_ros_driver2.pc  path_follower.pc  robot.pc  serial_com.pc
真机/ws/devel/lib/serial_com/: serial_com  test_node
真机/ws/devel/share/astar_path_planner/cmake/: astar_path_plannerConfig.cmake
真机/ws/devel/share/decision/cmake/: decisionConfig.cmake
真机/ws/devel/share/dynamic_map_generator/cmake/: dynamic_map_generatorConfig.cmake
真机/ws/devel/share/imu_to_odom/cmake/: imu_to_odomConfig.cmake
真机/ws/devel/share/livox_ros_driver2/cmake/: livox_ros_driver2-msg-paths.cmake  livox_ros_driver2Config.cmake
真机/ws/devel/share/path_follower/cmake/: path_followerConfig.cmake
真机/ws/devel/share/robot/cmake/: robotConfig.cmake
真机/ws/devel/share/roseus/ros/livox_ros_driver2/: manifest.l
真机/ws/devel/share/serial_com/cmake/: serial_comConfig.cmake
真机/ws/src/: readme copy.md  readme.md
真机/ws/src/astar_path_planner/: CMakeLists.txt
真机/ws/src/astar_path_planner/src/: astar_planner_node copy.cpp  astar_planner_node.cpp
真机/ws/src/decision/launch/: decision.launch
真机/ws/src/decision/src/: decision_node.cpp
真机/ws/src/dynamic_map_generator/: CMakeLists.txt  package.xml
真机/ws/src/dynamic_map_generator/launch/: dynamic_map_generator.launch
真机/ws/src/dynamic_map_generator/src/: dynamic_map_generator_node copy 2.cpp  dynamic_map_generator_node.cpp
真机/ws/src/livox_ros_driver2/: .last_build_config
真机/ws/src/livox_ros_driver2/config/: MID360_config.json
真机/ws/src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch
真机/ws/src/livox_ros_driver2/src/include/: livox_ros_driver2.h
真机/ws/src/path_follower/: package.xml
真机/ws/src/path_follower/launch/: path_follower.launch
真机/ws/src/path_follower/src/: path_follower.cpp
真机/ws/src/robot/launch/: amcl.launch  nav copy.launch  nav.launch  temp.launch
真机/ws/src/robot/map/: map.pgm
真机/ws/src/robot/meshes/: base_link.STL  wheel_link3.STL  wheel_link4.STL
真机/ws/src/robot/rviz/: config.rviz
真机/ws/src/robot/world/: arena.world
真机/ws/src/serial_com/: CMakeLists.txt
真机/ws/src/serial_com/include/: serial_com.h
真机/ws/src/serial_com/launch/: serial_com.launch
真机/ws/src/serial_com/src/: serial_com copy 2.cpp  serial_com copy.cpp  serial_com.cpp
