<?xml version="1.0"?>
<package format="2">
  <name>imu_to_odom</name>
  <version>1.0.0</version>
  <description>
    将IMU传感器数据转换为Odometry消息的ROS节点。
    从/imu/data话题接收IMU数据，计算x、y方向的线速度和绕z轴的角速度，
    并以0.1秒的固定间隔发布到/odom话题。
  </description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <author email="your-email@example.com">Your Name</author>
  
  <url type="website">http://wiki.ros.org/imu_to_odom</url>
  <url type="bugtracker">https://github.com/your-repo/imu_to_odom/issues</url>
  <url type="repository">https://github.com/your-repo/imu_to_odom</url>

  <!-- 构建依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 构建时依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <!-- 运行时依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!-- 导出 -->
  <export>
    <!-- 可执行文件 -->
    <build_type>catkin</build_type>
    
    <!-- 如果有动态库 -->
    <!-- <rosdoc config="rosdoc.yaml"/> -->
    
    <!-- Gazebo插件（如果需要） -->
    <!-- <gazebo_ros plugin_path="${prefix}/lib" /> -->
    
    <!-- RVIZ插件（如果需要） -->
    <!-- <rviz plugin="${prefix}/plugin_description.xml" /> -->
  </export>
</package>