<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit_controller</name>
  <version>1.0.0</version>
  <description>Pure Pursuit path following controller for ROS</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>