<?xml version="1.0"?>
<package format="2">
  <name>smooth_path_follower</name>
  <version>1.0.0</version>
  <description>
    A smooth path follower for ROS that uses AMCL pose and global path 
    to generate smooth velocity commands for robot navigation.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 编译依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>angles</build_depend>

  <!-- 运行时依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>angles</exec_depend>

  <!-- ROS消息和服务依赖 -->
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- 导出 -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>