<?xml version="1.0"?>
<package format="2">
  <name>dynamic_map_generator</name>
  <version>0.0.1</version>
  <description>Dynamic map generator from laser scan</description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
</package>