<?xml version="1.0"?>
<package format="2">
  <name>path_follower</name>
  <version>1.0.0</version>
  <description>
    Path following controller for omnidirectional robots with PID control.
    Follows global path using lookahead point and transforms coordinates
    using TF for smooth and stable control.
  </description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/path_follower</url>
  <url type="bugtracker">https://github.com/your-repo/issues</url>
  <url type="repository">https://github.com/your-repo/path_follower</url>

  <author email="user@example.com">Your Name</author>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- 运行依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- 系统依赖 -->
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <!-- 导出 -->
  <export>
    <!-- 可选：指定其他ROS包的元数据 -->
  </export>
</package>